# fmc-analyser

./: .gitignore  .gitlab-ci.yml  .secrets_template.toml  AccessPolicy.py  AccessRule.py  ExportToExcel.py  FMCLoader.py  Main.py  NOTICE.md  README.md  analyser.py  config.yml  excel_export.py  fmc_loader.py  main.py  pyproject.toml  requests.txt  requirements.txt
.github/workflows/: python-app.yml
Archive/: Main_requests.py
Exports/: access_rules.xlsx  access_rules_v1.xlsx  equal_networks.xlsx  equal_ports.xlsx  final.xlsx  ports.xlsx
Logic/: BuilderLogic.py  DataLogic.py  Model.py
Models/: AccessPolicy.py  AccessRule.py  Network.py  NetworkGroup.py  NetworkObject.py  Port.py  PortGroup.py  PortObject.py  RiskEnum.py
Test/: test.py
Tests/: TestAccessRules.py  TestNetworks.py  TestPorts.py
exports/: final.xlsx
logic/: BuilderLogic.py  DataLogic.py  builder_logic.py  data_logic.py  excel_export.py  export_data_logic.py  fmc_loader.py
models/: AccessPolicy.py  AccessRule.py  NetworkGroup.py  Port.py  PortGroup.py  access_policy.py  access_rule.py  fqdn_object.py  host.py  icmp_object.py  network.py  network_group.py  network_object.py  port.py  port_group.py  port_object.py  range.py  risk_enum.py
tests/: TestAccessRules.py  TestNetworks.py  TestPorts.py  test_access_rules.py  test_networks.py  test_ports.py
